# ryt-rss

./: Cargo.toml  LICENSE  README.md
src/: fetcher.rs  main.rs  renderer.rs  router.rs
templates/: basefeed.rss.tera
