[package]
name = "ryt-rss"
version = "0.1.0"
authors = ["Daniel Schaefer <git@danielschaefer.me>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
serde = "1.0.70"
serde_derive = "1.0.70"
tera = "0.11.9"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
